Update css paths

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ window.addEvent('load', function() {
 
 
 
-<link rel="stylesheet" href="/templates/system/css/system.css" type="text/css" />
+<link rel="stylesheet" href="/stylesheets/system.css" type="text/css" />
 
 
 
@@ -79,7 +79,7 @@ window.addEvent('load', function() {
 
 
 
-<link rel="stylesheet" href="/templates/system/css/general.css" type="text/css" />
+<link rel="stylesheet" href="/stylesheets/general.css" type="text/css" />
 
 
 
@@ -87,7 +87,7 @@ window.addEvent('load', function() {
 
 
 
-<link rel="stylesheet" href="/templates/worldchangers/css/main.css" type="text/css" />
+<link rel="stylesheet" href="/stylesheets/main.css" type="text/css" />
 
 
 
