Modify path for fonts

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body { font-family: "Domestic Manners", serif, arial, helvetica;
        font-weight: normal;
        font-stretch: normal;
        font-stretch: normal;
-       src: url("/components/com_phocafont/fonts/Domestic_Manners.ttf") format("truetype");
+       src: url("/fonts/Domestic_Manners.ttf") format("truetype");
    }
 body { font-family: "Domestic Manners", serif, arial, helvetica;
 
