--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 
-  <base href="http://worldchangersintl.org/our-mission.html" />
+  <base href="https://cameronboyer.github.io/testwci/" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="keywords" content="world changers" />
   <meta name="rights" content="world changers" />
