--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ window.addEvent('load', function() {
 
 
 
-<link rel="stylesheet" href="/stylesheets/system.css" type="text/css" />
+<link rel="stylesheet" href="stylesheets/system.css" type="text/css" />
 
 
 
