--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body { font-family: "Domestic Manners", serif, arial, helvetica;
 
 <div id="logo">
 
-<a href="/" title=""><img src="/images/logo.jpg" /></a>
+<a href="/" title=""><img src="images/logo.jpg" /></a>
 
 </div>
 
